Added ChronicleMapStore